# survshap

./: .gitignore  LICENSE  README.md  data_generation.R  exp1.ipynb  exp1_non_td.ipynb  exp1_weibull.ipynb  exp2.ipynb  exp2_survlime_dataset0.ipynb  exp2_survlime_dataset1.ipynb  exp2_survnam_explanations.ipynb  exp2_survshap_dataset0.ipynb  exp2_survshap_dataset1.ipynb  exp3.ipynb  plots.R  setup.py  survLIME.py  survlime.py
SurvSHAP/: __init__.py
data/: exp1_data_non_td.csv  exp1_data_weibull_td.csv  exp2_dataset0.csv  exp2_dataset1_test.csv  exp2_dataset1_train.csv
experiments/: exp1_complex.ipynb  exp1_exponential.ipynb  exp1_non_td.ipynb  exp2_survlime_dataset0.ipynb  exp2_survlime_dataset1.ipynb  exp2_survnam_analysis.ipynb  exp2_survnam_explanations.ipynb  exp2_survshap_dataset0.ipynb  exp3.ipynb
results/: exp1_example_cph.csv  exp1_exponential_local_accuracy.csv  exp1_exponential_model_brier_score.csv  exp1_gt_shap_cph.csv  exp1_model_brier_score.csv  exp1_non_td_local_accuracy.csv  exp1_weibull_model_brier_score.csv  exp2_dataset0_model_brier_score.csv  exp2_local_accuracy_cph_dataset0.csv  exp2_local_accuracy_cph_dataset1.csv  exp2_local_accuracy_rsf_dataset0.csv  exp2_local_accuracy_rsf_dataset1.csv  exp2_survlime_orderings_rsf_dataset0.csv  exp2_survlime_orderings_rsf_dataset1.csv  exp2_survshap_orderings_cph_dataset1.csv  exp2_survshap_orderings_rsf_dataset1.csv  exp3_example_cph_2.csv  exp3_example_rsf.csv  exp3_example_rsf_2.csv  exp3_example_rsf_agg.csv  exp3_model_brier_score.csv  exp3_survlime_orderings_cph.csv  exp3_survlime_orderings_rsf.csv  exp3_survshap_orderings_cph.csv  exp3_survshap_orderings_rsf.csv  survnam_explanations_dataset0_cph.csv  survnam_explanations_dataset0_rsf.csv  survnam_explanations_dataset1_cph.csv  survnam_explanations_dataset1_rsf.csv
survshap_package/: README.md  pyproject.toml
survshap_package/survshap/: __init__.py  explainer.py
survshap_package/survshap/model_explanations/: __init__.py  object.py  plot.py  utils.py
survshap_package/survshap/predict_explanations/: object.py  plot.py  utils.py
(+43 files in other folders)
